@@ -1,0 +1,76 @@
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    style="@style/content" >
+
+    <LinearLayout
+        android:id="@+id/playerListPanel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        
+	    <ListView
+	        android:id="@+id/playerList"
+	        android:layout_width="match_parent"
+	        android:layout_height="match_parent"
+	        android:layout_marginTop="10dp" >
+	    </ListView>
+    
+    </LinearLayout>
+    
+    <LinearLayout 
+        android:id="@+id/dateRange"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/playerListPanel"
+        android:orientation="vertical">
+        
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            
+            <Button
+                android:id="@+id/startDate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/search_by_start_date"
+                android:layout_toLeftOf = "@+id/clearStartDate"
+                android:onClick="openStartDateDialog" />
+            
+            <ImageButton
+                android:id="@+id/clearStartDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/content_remove"
+                android:contentDescription="@string/remove_start_date"
+                android:layout_alignParentRight="true"
+                android:onClick="clearStartDate" />
+            
+        </RelativeLayout>
+        
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            
+            <Button
+                android:id="@+id/endDate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/search_by_end_date"
+                android:layout_toLeftOf = "@+id/clearEndDate"
+                android:onClick="openEndDateDialog" />
+            
+            <ImageButton
+                android:id="@+id/clearEndDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/content_remove"
+                android:contentDescription="@string/remove_end_date"
+                android:layout_alignParentRight="true"
+                android:onClick="clearEndDate" />
+            
+        </RelativeLayout>
+        
+    </LinearLayout>
+
+</RelativeLayout>
