@@ -1,3 +1,3 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/filter" android:showAsAction="ifRoom|withText" android:title="@string/filter" android:icon="@drawable/action_search"></item>
+    <item android:id="@+id/search" android:showAsAction="ifRoom|withText" android:title="@string/search" android:icon="@drawable/action_search"></item>
 </menu>
