@@ -56,7 +56,7 @@
     <string name="statistics">Statistics</string>
     <string name="about">About</string>
     <string name="about_text">Agricola Scorer by Craig Fleming (rythos42@gmail.com). Dominican font by www.haroldsfonts.com. Chart icon by blog.twg.ca.</string>
-    <string name="filter">Filter</string>
+    <string name="search">Search</string>
     <string name="playersLabel">Players:</string>
     <string name="scores">Scores</string>
     <string name="score">Score</string>
@@ -86,11 +86,14 @@
     <string name="five_to_six">5&#8211;6</string>
     <string name="six_to_seven">6&#8211;7</string>
     <string name="randomize">Randomize</string>
-    <string name="title_activity_randomize">Randomize</string>
     <string name="action_settings">Settings</string>
     <string name="randomize_player">Starting Player</string>
 	<string name="can_not_edit">Can\'t edit game</string>
 	<string name="no_detail_scores">You can\'t edit this game because it doesn\'t have any score details!</string>
 	<string name="graph_of_scores">Graph of scores</string>
 	<string name="search_to_create_graph">Click search to show a graph!</string>
+	<string name="search_by_start_date">Search By Start Date</string>
+	<string name="search_by_end_date">Search By End Date</string>
+	<string name="remove_start_date">Remove start date</string>
+	<string name="remove_end_date">Remove end date</string>
 </resources>
